fix: Removed awards section and spacing change (#433)

--- a/src/app/modules/about-us/about-us.component.scss
+++ b/src/app/modules/about-us/about-us.component.scss
@@ -8,7 +8,7 @@
   color: #010002;
   --side-padding: 16px;
   --vertical-padding: 40px;
-  margin-top: 122px;
+  margin-top: 77px;
 
   @media screen and (min-width: $mobile-breakpoint) {
     --side-padding: 24px;
